--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,12 +19,14 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-      - task: Docker@2
-        inputs:
-          containerRegistry: 'alivelusai-docker'
-          command: 'start'
       - task: PublishBuildArtifacts@1
         inputs:
           PathtoPublish: '$(Build.ArtifactStagingDirectory)'
           ArtifactName: 'kube-manifests'
           publishLocation: 'Container'
+      - task: Docker@2
+        inputs:
+          containerRegistry: 'alivelusai-docker'
+          repository: 'alivelusai/terrakubectl'
+          command: 'buildAndPush'
+          Dockerfile: '**/Dockerfile'
