--- a/pod.yml
+++ b/pod.yml
@@ -1,10 +1,24 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: my-static-pod
+  creationTimestamp: null
+  labels:
+    app: nginx
+  name: nginx
 spec:
-  containers:
-  - name: my-container
-    iage: nginx:1.18
-
-    
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
+  strategy: {}
+  template:
+    metadata:
+      creationTimestamp: null
+      labels:
+        app: other
+    spec:
+      containers:
+      - image: nginx
+        name: nginx
+        resources: {}
+status: {}
