--- a/pod.yml
+++ b/pod.yml
@@ -1,10 +1,11 @@
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
+apiVersion: v1
+kind: PersistentVolumeClaim
 metadata:
-  name: managed-premium-custom
-provisioner: kubernetes.io/Azure-disk
-reclaimPolicy: Retain
-allowVolumeExpansion: true
-parameters:
-  storageaccounttype: Premium_LRS
-  kind: Managed
+  name: Azure-managed-disk
+spec:
+  accessModes:
+  - ReadWriteOnce
+  storageClassName: managed-premium-custom
+  resources:
+    requests:
+      storage: 10Gi
