--- a/pod.yml
+++ b/pod.yml
@@ -1,15 +1,11 @@
-kind: Pod
-apiVersion: v1
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
 metadata:
-  name: nginx
-spec:
-  containers:
-    - name: nginxfrontend
-      image: nginx
-      volumeMounts:
-      - mountPath: "/mnt/Azure"
-        name: volume
-  volumes:
-    - name: volume
-      persistentVolumeClaim:
-        claimName: azure-managed-disk
+  name: managed-premium-custom
+provisioner: kubernetes.io/Azure-disk
+reclaimPolicy: Delete
+volumeBindingMode: WaitForFirstConsumer
+allowVolumeExpansion: true
+parameters:
+  storageaccounttype: Premium_LRS
+  kind: Managed
