--- a/pod.yml
+++ b/pod.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: managed-premium-custom
+  storageClassName: premium-custom
   resources:
     requests:
       storage: 10Gi
