--- a/pod.yml
+++ b/pod.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: azure-managed-disk
+  name: managed-disk
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: premium-custom
+  storageClassName: managed-premium-custom
   resources:
     requests:
       storage: 10Gi
