--- a/pod.yml
+++ b/pod.yml
@@ -1,11 +1,15 @@
+kind: Pod
 apiVersion: v1
-kind: PersistentVolumeClaim
 metadata:
-  name: managed-disk
+  name: nginx
 spec:
-  accessModes:
-  - ReadWriteOnce
-  storageClassName: managed-premium-custom
-  resources:
-    requests:
-      storage: 10Gi
+  containers:
+    - name: nginxfrontend
+      image: nginx
+      volumeMounts:
+      - mountPath: "/mnt/Azure"
+        name: volume
+  volumes:
+    - name: volume
+      persistentVolumeClaim:
+        claimName: managed-disk
