--- a/pod.yml
+++ b/pod.yml
@@ -1,4 +1,21 @@
 apiVersion: v1
+kind: Pod
+metadata:
+  name: testpod
+spec:
+  volumes:
+  - name: myvol
+    emptyDir: {}
+
+  containers:
+  - name: container01
+    image: alivelusai/web:latest
+    volumeMounts:
+      - name: myvol
+        mountPath: /mount
+
+---
+apiVersion: v1
 kind: Service
 metadata:
   labels:
