--- a/ing.yml
+++ b/ing.yml
@@ -2,18 +2,27 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: example-ingress
+  namespace: default
+  annotations:
+    kubectl.kubernetes.io/last-applied-configuration: |
+      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"example-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"http":{"paths":[{"backend":{"service":{"name":"web","port":{"number":8080}}},"path":"/","pathType":"Prefix"},{"backend":{"service":{"name":"web2","port":{"number":8080}}},"path":"/v2","pathType":"Prefix"}]}}]}}
 spec:
   ingressClassName: nginx
   rules:
-    - http:
+    - host: amazon.in
+      http:
         paths:
-          - path: /
+          - path: /mobiles
             pathType: Prefix
             backend:
               service:
                 name: web
                 port:
                   number: 8080
+
+    - host: flipkart.in
+      http:
+        paths:
           - path: /v2
             pathType: Prefix
             backend:
